--- a/projects.html
+++ b/projects.html
@@ -13,11 +13,10 @@
     <a href="index.html" class="aries-brand"><img src="images/goat.png" class="aries-logo" alt="Aries"></a>
   </header>
 
-  <aside id="aries-sidebar" class="aries-sidebar hidden" role="complementary" aria-label="Project list">
-    <nav class="aries-sidebar-nav aries-sidebar-content">
-      <!-- populated by JS if empty -->
-    </nav>
-  </aside>
+<!-- Sidebar (projects.html) -->
+<aside id="aries-sidebar" class="aries-sidebar hidden" role="complementary" aria-label="Project list">
+  <nav class="aries-sidebar-nav aries-sidebar-content" role="navigation" aria-label="Projects"></nav>
+</aside>
 
   <main class="page-wrapper">
     <div class="container">
