--- a/index.html
+++ b/index.html
@@ -45,15 +45,16 @@
 <body>
 
   <!-- Header -->
-  <header id="aries-topbar" class="aries-topbar" role="banner">
-    <button id="aries-hamburger" class="aries-hamburger" aria-controls="aries-sidebar" aria-expanded="false" aria-label="Open menu">
-      <span class="sr-only">Open menu</span>☰
-    </button>
-    <div class="aries-title">PROJECT MANAGER</div>
-    <a href="index.html" class="aries-brand" aria-label="Go to dashboard">
-      <img src="images/goat.png" alt="Aries" class="aries-logo">
+<!-- HEADER (index.html) -->
+<header class="aries-topbar">
+    <button id="aries-hamburger" class="aries-hamburger" aria-label="Open sidebar">☰</button>
+
+    <!-- NO PROJECT MANAGER TITLE HERE -->
+
+    <a href="index.html" class="aries-brand">
+        <img src="goat.png" alt="Aries Logo" class="aries-logo">
     </a>
-  </header>
+</header>
 
 <!-- Sidebar (index.html) -->
 <aside id="aries-sidebar" class="aries-sidebar hidden" role="complementary" aria-label="Project list">
@@ -76,4 +77,5 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
