--- a/projects.html
+++ b/projects.html
@@ -7,11 +7,16 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <header id="aries-topbar" class="aries-topbar" role="banner">
-    <button id="aries-hamburger" class="aries-hamburger" aria-controls="aries-sidebar" aria-expanded="false">☰</button>
-    <div class="aries-title">PROJECT MANAGER</div>
-    <a href="index.html" class="aries-brand"><img src="images/goat.png" class="aries-logo" alt="Aries"></a>
-  </header>
+<!-- HEADER (projects.html) -->
+<header class="aries-topbar">
+    <button id="aries-hamburger" class="aries-hamburger" aria-label="Open sidebar">☰</button>
+
+    <span class="aries-title">PROJECT MANAGER</span>
+
+    <a href="index.html" class="aries-brand">
+        <img src="goat.png" alt="Aries Logo" class="aries-logo">
+    </a>
+</header>
 
 <!-- Sidebar (projects.html) -->
 <aside id="aries-sidebar" class="aries-sidebar hidden" role="complementary" aria-label="Project list">
